<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_sort"
          android:title="@string/sort"
          android:showAsAction="never" >
          <menu>
              <item android:id="@+id/sort_name"
                  android:title="@string/sort_name">
                  <menu>
                      <item android:id="@+id/sort_asc"
                  			android:title="@string/sort_asc">
                          
                      </item>
                      <item android:id="@+id/sort_desc"
                  			android:title="@string/sort_desc">
              		  </item>
                  </menu>
              </item>
              <item android:id="@+id/sort_year"
                  android:title="@string/sort_year">
                  <menu>
                      <item android:id="@+id/sort_ascY"
                  			android:title="@string/sort_asc">
                          
                      </item>
                      <item android:id="@+id/sort_descY"
                  			android:title="@string/sort_desc">
              		  </item>
                  </menu>
             </item>
		  </menu>
    </item>
</menu>
